--- a/regresion_logistica-main/src/app/admin/admin.component.html
+++ b/regresion_logistica-main/src/app/admin/admin.component.html
@@ -10,4 +10,22 @@
     </ul>
   </nav>
 </div>
+<div class="move1">
+  <h2>Resultado de la prediccion</h2>
+  </div>
+  <div class="move">
+    <div class="notification" *ngFor="let respuesta of respuestas; let i = index" class="notification">
+      <div class="card">
+        <div class="card-header">
+          <h5 class="card-title">Resultado</h5>
+        </div>
+        <div class="card-body">
+          <p class="card-text">Mensaje: {{respuesta.menssage }}</p>
+         
+        
+      </div>
+    </div>
+    </div>
+  <div class="miElemento">
 <app-pie></app-pie>
+</div>
